# talpa

./: .cdtproject  .project  Makefile26.in  README.md  TODO  bootstrap  configure.ac  makefile.am  talpa-disable  talpa-enable  talpa-ins  talpa-rm  talpa-status
clients/: Makefile.am  pe-lib.c  pe.c  pe.h  pecat.c  talpa.c  vc-count.c  vc-deny.c  vc-lib.c  vc-poll.c  vc-quiet.c  vc-threaded.c  vc.c  vc.h
doc/: README.txt  TALPA-ImplementationDescription.odt  TALPA-SoftwareSpecification.odt  TALPA-SoftwareSpecification.sxw  TALPA-UnitTestingPlan.odt  TALPA-UnitTestingPlan.sxw
doc/CacheDesign/: PeanutCache.rtf  cacheMatch.c
doc/Review comments/: SoftwareSpecComments.rtf
include/: talpa-processexclusion.h  talpa-vettingclient.h
models/: talpa.sql
prototypes/msgqsrv/: msgqsrv.cpp
prototypes/multi-module/: Makefile  talpa-core-test.c  talpa-test.c
prototypes/sockmod/: Makefile  sockmod.c
prototypes/socksrv/: Makefile  socksrv.c
prototypes/sysctl_procfs/: Makefile  cfginf_sysctl.c
src/app-ctrl/core/talpa-core/: Makefile.am  common.mk  talpa_core_module.c
src/app-ctrl/core/talpa-linux/: Makefile.am  common.mk  talpa_linux_module.c
src/app-ctrl/filter-iface/process-exclusion/talpa-pedevice/: Makefile.am  common.mk  talpa_pedevice_module.c
src/app-ctrl/filter-iface/vetting-clients/talpa-vcdevice/: Makefile.am  common.mk  talpa_vcdevice_module.c
src/app-ctrl/intercepts/talpa-lsm/: common.mk  talpa_lsm_module.c
src/app-ctrl/intercepts/talpa-syscall/: Makefile.am  common.mk  talpa_syscall_module.c
src/app-ctrl/intercepts/talpa-vfshook/: Makefile.am  common.mk  talpa_vfshook_module.c
src/components/core/cache_impl/: cache.c  cache.h
src/components/core/intercept_filters_impl/cache/: cache_allow.c  cache_allow.h  cache_deny.c  cache_deny.h  cache_eval.c  cache_eval.h
src/components/core/intercept_filters_impl/degraded_mode/: degraded_mode.c  degraded_mode.h
src/components/core/intercept_filters_impl/deny_syslog/: deny_syslog.c  deny_syslog.h
src/components/core/intercept_filters_impl/fsobj_excl/: filesystem_exclusion_processor.c  (+1 more)
src/components/core/intercept_processing_impl/: evaluation_report_impl.c  evaluation_report_impl.h  std_intercept_processor.c  std_intercept_processor.h
src/components/intercepts/lsm_impl/: lsm_interceptor.c  lsm_interceptor.h
src/components/intercepts/syscall_impl/: syscall_interceptor.c  syscall_interceptor.h
src/components/intercepts/vfshook_impl/: findRegular.h  findRegular_iterate_dir.c  findRegular_vfs_readdir.c  getPath.c  getPath.h  vfshook_interceptor.c  vfshook_interceptor.h
src/components/services/configurator_impl/: dualfs_configurator.c  dualfs_configurator.h  procfs_configurator.c  procfs_configurator.h  securityfs_configurator.c  securityfs_configurator.h
src/components/services/linux_filesystem_impl/: linux_file.c  linux_file.h  linux_fileinfo.c  linux_fileinfo.h  linux_filesystem_factoryimpl.c  linux_filesystem_factoryimpl.h  linux_filesysteminfo.c  linux_filesysteminfo.h  linux_systemroot.c  linux_systemroot.h
src/components/services/linux_personality_impl/: linux_personality.c  linux_personality.h  linux_personality_factoryimpl.c  linux_personality_factoryimpl.h
src/components/services/linux_processandthread_impl/: linux_processandthread_factoryimpl.c  linux_processandthread_factoryimpl.h  linux_threadinfo.c  linux_threadinfo.h
src/ifaces/app_ctrl/: icore_app_ctrl.h  iportability_app_ctrl.h
src/ifaces/cache/: icache.h
src/ifaces/common/: assert.h  bool.h  list.h  locking.h  talpa.h
src/ifaces/configurator/: econfiguration_group.h  iconfigurable.h  iconfigurator.h  pod_configuration_element.h
src/ifaces/filesystem/: efilesystem_operation.h  ifile.h  ifile_info.h  ifilesystem_factory.h  ifilesystem_info.h  isystemroot.h
src/ifaces/intercept_filters/: eintercept_action.h  ievaluation_report.h  iintercept_filter.h
src/ifaces/intercept_processing/: iintercept_processor.h
src/ifaces/interception/: iinterceptor.h
src/ifaces/personality/: ipersonality.h  ipersonality_factory.h
src/ifaces/process_and_thread/: ithreadandprocess_factory.h  ithreadinfo.h
src/ifaces/process_excluder/: iprocess_excluder.h
src/ifaces/system_interfaces/: idevice_file.h
src/ifaces/vetting_server/: ivetting_server.h
support/: talpactl
support/stacker/: common.mk  stacker.c
support/symbolver/: common.mk  symbolver.c
tests/: Makefile.am  bench.sh  chk_ddvc.c  chk_ddvc.sh  chk_ddvc1.c  chk_ddvc1.sh  chk_ddvc2.c  chk_ddvc2.sh  chk_ddvc3.c  chk_ddvc3.sh  chk_ddvc4.c  chk_ddvc4.sh  chk_ddvc5.c  chk_ddvc5.sh  chk_ddvc6.c  chk_ddvc6.sh  chk_ddvc7.c  chk_ddvc7.sh  chk_ddvc8.c  chk_ddvc8.sh  chk_denysyslog3.c  chk_denysyslog3.sh  chk_denysyslog4.c  chk_denysyslog4.sh  chk_fsexclusion.c  chk_fsexclusion.sh  chk_fsexclusion1.sh  chk_fsexclusion10.c  chk_fsexclusion10.sh  chk_fsexclusion11.sh  chk_fsexclusion12.sh  chk_fsexclusion13.sh  chk_fsexclusion14.sh  chk_fsexclusion15.c  chk_fsexclusion15.sh  chk_fsexclusion16.sh  chk_fsexclusion17.sh  chk_fsexclusion18.sh  chk_fsexclusion19.sh  chk_fsexclusion2.sh  (+363 more)
tests/benchmark/: Makefile.am  bench.sh  graph.pl  open-bench.c
tests/configure/: dotruncate1.c  dotruncate2.c  dotruncate3.c  dotruncate6.c  dotruncaterh4.c  dotruncatesuse103.c  dpath.c  dpathpath.c  dpathsles11.c  dpathsuse103.c  ffzb.c  hrtimersversion16.c  hrtimersversion17.c  hrtimersversion21.c  kernarch.c  kernelheaders.c  kernrelease.c  kernversion.c  lsm.c  lsm2610.c  lsm2614.c  lsm265.c  lsm266.c  lsmkeys.c  msecstojiffies.c  probe_kernel_write.c  rodata.c  security.c  securityfs.c  structfilename.c  tasksignal.c  tasktty.c  unlink.c  unlink_delegate.c  unlinksuse103.c  unlinkvserver.c
tests/modules/: Makefile  Makefile26.in  common.mk  makefile.am  tlp-test.h  tlp_cache.c  tlp_cacheobj.c  tlp_ddvc.c  tlp_degrmode.c  tlp_denysyslog.c  tlp_dualfs.c  tlp_exclusion.c  tlp_file.c  tlp_fileinfo.c  tlp_filesysteminfo.c  tlp_inclusion.c  tlp_opexcl.c  tlp_personality.c  tlp_procfs.c  tlp_securityfs.c  tlp_stdinterceptor.c  tlp_syscalltable.c  tlp_syslog.c  tlp_threadinfo.c  tlp_wronginterceptor.c
(+14 files in other folders)
