#
# tests/Makefile.am
#
# TALPA Filesystem Interceptor
#
# Copyright (C) 2004 Sophos Plc, Oxford, England.
#
# This program is free software; you can redistribute it and/or modify it under the terms of the
# GNU General Public License Version 2 as published by the Free Software Foundation.
#
# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
# even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
# See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with this program; if not,
# write to the Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA
#

AM_CFLAGS = -I$(srcdir)/include -I$(srcdir) -I$(top_srcdir)

check_PROGRAMS =    tlp-1-001 \
                    tlp-1-002 \
                    tlp-1-003 \
                    tlp-1-004 \
                    tlp-1-008 \
                    tlp-1-009 \
                    tlp-1-010 \
                    tlp-1-011 \
                    tlp-1-012 \
                    tlp-1-013 \
                    tlp-1-014 \
                    tlp-1-015 \
                    tlp-1-016 \
                    tlp-1-017 \
                    tlp-1-018 \
                    tlp-1-019 \
                    tlp-1-020 \
                    tlp-1-021 \
                    tlp-1-022 \
                    tlp-1-023 \
                    tlp-1-024 \
                    tlp-1-025 \
                    tlp-1-026 \
                    tlp-1-109 \
                    tlp-1-110 \
                    tlp-1-111 \
                    tlp-2-001 \
                    tlp-2-002 \
                    tlp-2-010 \
                    tlp-2-011 \
                    tlp-2-012 \
                    tlp-2-013 \
                    tlp-2-023 \
                    tlp-2-024 \
                    tlp-2-030 \
                    tlp-2-040 \
                    tlp-2-041 \
                    tlp-2-042 \
                    tlp-2-043 \
                    tlp-2-044 \
                    tlp-2-045 \
                    tlp-2-046 \
                    tlp-2-047 \
                    tlp-2-048 \
                    tlp-2-060 \
                    tlp-2-061 \
                    tlp-2-062 \
                    tlp-2-063 \
                    tlp-2-064 \
                    tlp-2-065 \
                    tlp-2-068 \
                    tlp-3-001 \
                    tlp-3-010 \
                    tlp-3-012 \
                    tlp-3-020 \
                    tlp-4-001 \
                    tlp-4-002 \
                    tlp-4-003 \
                    tlp-4-003a \
                    tlp-4-004 \
                    tlp-4-005 \
                    tlp-5-001 \
                    tlp-5-002 \
                    tlp-5-003 \
                    tlp-6-001 \
                    tlp-6-002 \
                    tlp-6-003 \
                    tlp-6-004 \
                    tlp-6-010 \
                    tlp-6-011 \
                    tlp-6-012 \
                    tlp-6-013 \
                    tlp-6-014 \
                    tlp-6-020 \
                    tlp-6-021 \
                    tlp-6-022 \
                    tlp-6-023 \
                    tlp-6-024 \
                    tlp-6-025 \
                    tlp-6-026 \
                    tlp-6-027 \
                    tlp-6-028 \
                    tlp-7-001 \
                    tlp-7-003 \
                    tlp-7-005 \
                    tlp-8-001 \
                    tlp-8-002 \
                    tlp-8-003 \
                    tlp-8-004

tlp_1_001_SOURCES = tlp-1-001.c tlp-test.h
tlp_1_002_SOURCES = tlp-1-002.c
tlp_1_003_SOURCES = tlp-1-003.c
tlp_1_004_SOURCES = tlp-1-004.c
tlp_1_008_SOURCES = tlp-1-008.c
tlp_1_009_SOURCES = tlp-1-009.c
tlp_1_010_SOURCES = tlp-1-010.c
tlp_1_011_SOURCES = tlp-1-011.c
tlp_1_012_SOURCES = tlp-1-012.c
tlp_1_013_SOURCES = tlp-1-013.c
tlp_1_014_SOURCES = tlp-1-014.c
tlp_1_015_SOURCES = tlp-1-015.c
tlp_1_016_SOURCES = tlp-1-016.c
tlp_1_017_SOURCES = tlp-1-017.c
tlp_1_018_SOURCES = tlp-1-018.c
tlp_1_019_SOURCES = tlp-1-019.c
tlp_1_020_SOURCES = tlp-1-020.c
tlp_1_021_SOURCES = tlp-1-021.c
tlp_1_022_SOURCES = tlp-1-022.c
tlp_1_023_SOURCES = tlp-1-023.c
tlp_1_024_SOURCES = tlp-1-024.c
tlp_1_025_SOURCES = tlp-1-025.c
tlp_1_026_SOURCES = tlp-1-026.c
tlp_1_109_SOURCES = tlp-1-109.c
tlp_1_110_SOURCES = tlp-1-110.c
tlp_1_111_SOURCES = tlp-1-111.c
tlp_2_001_SOURCES = tlp-2-001.c
tlp_2_002_SOURCES = tlp-2-002.c
tlp_2_010_SOURCES = tlp-2-010.c
tlp_2_011_SOURCES = tlp-2-011.c
tlp_2_012_SOURCES = tlp-2-012.c
tlp_2_013_SOURCES = tlp-2-013.c
tlp_2_023_SOURCES = tlp-2-023.c tlp-log-search.c
tlp_2_024_SOURCES = tlp-2-024.c tlp-log-search.c
tlp_2_030_SOURCES = tlp-2-030.c
tlp_2_040_SOURCES = tlp-2-040.c tlp-log-search.c
tlp_2_041_SOURCES = tlp-2-041.c tlp-log-search.c
tlp_2_042_SOURCES = tlp-2-042.c
tlp_2_043_SOURCES = tlp-2-043.c
tlp_2_044_SOURCES = tlp-2-044.c
tlp_2_045_SOURCES = tlp-2-045.c
tlp_2_046_SOURCES = tlp-2-046.c
tlp_2_047_SOURCES = tlp-2-047.c
tlp_2_048_SOURCES = tlp-2-048.c
tlp_2_060_SOURCES = tlp-2-060.c ../clients/vc-lib.c
tlp_2_061_SOURCES = tlp-2-061.c ../clients/vc-lib.c
tlp_2_062_SOURCES = tlp-2-062.c ../clients/vc-lib.c
tlp_2_063_SOURCES = tlp-2-063.c ../clients/vc-lib.c
tlp_2_064_SOURCES = tlp-2-064.c ../clients/vc-lib.c
tlp_2_065_SOURCES = tlp-2-065.c ../clients/vc-lib.c
tlp_2_068_SOURCES = tlp-2-068.c ../clients/vc-lib.c
tlp_3_001_SOURCES = tlp-3-001.c
tlp_3_010_SOURCES = tlp-3-010.c
tlp_3_012_SOURCES = tlp-3-012.c
tlp_3_020_SOURCES = tlp-3-020.c
tlp_4_001_SOURCES = tlp-4-001.c ../clients/vc-lib.c ../clients/pe-lib.c
tlp_4_002_SOURCES = tlp-4-002.c ../clients/vc-lib.c ../clients/pe-lib.c
tlp_4_003_SOURCES = tlp-4-003.c ../clients/pe-lib.c
tlp_4_003a_SOURCES = tlp-4-003a.c ../clients/vc-lib.c
tlp_4_004_SOURCES = tlp-4-004.c ../clients/pe-lib.c
tlp_4_005_SOURCES = tlp-4-005.c ../clients/pe-lib.c
tlp_4_005_LDFLAGS = -lpthread
tlp_5_001_SOURCES = tlp-5-001.c
tlp_5_002_SOURCES = tlp-5-002.c
tlp_5_003_SOURCES = tlp-5-003.c
tlp_6_001_SOURCES = tlp-6-001.c
tlp_6_002_SOURCES = tlp-6-002.c
tlp_6_003_SOURCES = tlp-6-003.c
tlp_6_004_SOURCES = tlp-6-004.c
tlp_6_010_SOURCES = tlp-6-010.c
tlp_6_011_SOURCES = tlp-6-011.c
tlp_6_012_SOURCES = tlp-6-012.c
tlp_6_013_SOURCES = tlp-6-013.c
tlp_6_014_SOURCES = tlp-6-014.c
tlp_6_020_SOURCES = tlp-6-020.c
tlp_6_021_SOURCES = tlp-6-021.c
tlp_6_022_SOURCES = tlp-6-022.c
tlp_6_023_SOURCES = tlp-6-023.c
tlp_6_024_SOURCES = tlp-6-024.c
tlp_6_025_SOURCES = tlp-6-025.c
tlp_6_026_SOURCES = tlp-6-026.c
tlp_6_027_SOURCES = tlp-6-027.c
tlp_6_028_SOURCES = tlp-6-028.c
tlp_7_001_SOURCES = tlp-7-001.c ../clients/vc-lib.c
tlp_7_003_SOURCES = tlp-7-003.c ../clients/vc-lib.c
tlp_7_005_SOURCES = tlp-7-005.c ../clients/vc-lib.c
tlp_8_001_SOURCES = tlp-8-001.c ../clients/vc-lib.c ../clients/pe-lib.c
tlp_8_002_SOURCES = tlp-8-002.c ../clients/vc-lib.c ../clients/pe-lib.c
tlp_8_003_SOURCES = tlp-8-003.c ../clients/vc-lib.c ../clients/pe-lib.c
tlp_8_004_SOURCES = tlp-8-004.c ../clients/vc-lib.c ../clients/pe-lib.c

SUBDIRS = modules

TESTS                   = tlp-init.sh \
                          tlp-1-001.sh \
                          tlp-1-002.sh \
                          tlp-1-003.sh \
                          tlp-1-004.sh \
                          tlp-1-005.sh \
                          tlp-1-006.sh \
                          tlp-1-007.sh \
                          tlp-1-008.sh \
                          tlp-1-009.sh \
                          tlp-1-010.sh \
                          tlp-1-011.sh \
                          tlp-1-012.sh \
                          tlp-1-013.sh \
                          tlp-1-014.sh \
                          tlp-1-015.sh \
                          tlp-1-016.sh \
                          tlp-1-017.sh \
                          tlp-1-018.sh \
                          tlp-1-019.sh \
                          tlp-1-020.sh \
                          tlp-1-021.sh \
                          tlp-1-022.sh \
                          tlp-1-023.sh \
                          tlp-1-024.sh \
                          tlp-1-025.sh \
                          tlp-1-026.sh \
                          tlp-2-001.sh \
                          tlp-2-002.sh \
                          tlp-2-010.sh \
                          tlp-2-011.sh \
                          tlp-2-012.sh \
                          tlp-2-013.sh \
                          tlp-2-020.sh \
                          tlp-2-021.sh \
                          tlp-2-022.sh \
                          tlp-2-023.sh \
                          tlp-2-024.sh \
                          tlp-2-030.sh \
                          tlp-2-040.sh \
                          tlp-2-041.sh \
                          tlp-2-042.sh \
                          tlp-2-043.sh \
                          tlp-2-044.sh \
                          tlp-2-045.sh \
                          tlp-2-046.sh \
                          tlp-2-047.sh \
                          tlp-2-048.sh \
                          tlp-2-060.sh \
                          tlp-2-061.sh \
                          tlp-2-062.sh \
                          tlp-2-063.sh \
                          tlp-2-064.sh \
                          tlp-2-065.sh \
                          tlp-2-066.sh \
                          tlp-2-067.sh \
                          tlp-2-068.sh \
                          tlp-3-001.sh \
                          tlp-3-002.sh \
                          tlp-3-003.sh \
                          tlp-3-004.sh \
                          tlp-3-005.sh \
                          tlp-3-006.sh \
                          tlp-3-007.sh \
                          tlp-3-008.sh \
                          tlp-3-010.sh \
                          tlp-3-011.sh \
                          tlp-3-012.sh \
                          tlp-3-013.sh \
                          tlp-3-014.sh \
                          tlp-3-015.sh \
                          tlp-3-016.sh \
                          tlp-3-020.sh \
                          tlp-3-021.sh \
                          tlp-3-022.sh \
                          tlp-3-023.sh \
                          tlp-3-024.sh \
                          tlp-4-001.sh \
                          tlp-4-002.sh \
                          tlp-4-003.sh \
                          tlp-4-004.sh \
                          tlp-4-005.sh \
                          tlp-5-001.sh \
                          tlp-5-002.sh \
                          tlp-5-003.sh \
                          tlp-6-001.sh \
                          tlp-6-002.sh \
                          tlp-6-003.sh \
                          tlp-6-004.sh \
                          tlp-6-010.sh \
                          tlp-6-011.sh \
                          tlp-6-012.sh \
                          tlp-6-013.sh \
                          tlp-6-014.sh \
                          tlp-6-020.sh \
                          tlp-6-021.sh \
                          tlp-6-022.sh \
                          tlp-6-023.sh \
                          tlp-6-024.sh \
                          tlp-6-025.sh \
                          tlp-6-026.sh \
                          tlp-6-027.sh \
                          tlp-6-028.sh \
                          tlp-7-001.sh \
                          tlp-7-002.sh \
                          tlp-7-003.sh \
                          tlp-7-004.sh \
                          tlp-7-005.sh \
                          tlp-8-001.sh \
                          tlp-8-002.sh \
                          tlp-8-003.sh \
                          tlp-8-004.sh \
                          $(if $(NOLOADTEST),,\
                            tlp-1-109.sh \
                            tlp-1-110.sh \
                            tlp-1-111.sh \
                            tlp-1-112.sh) \
                          tlp-cleanup.sh

check_SCRIPTS =           $(TESTS) \
			  tlp-4-003a.sh \
			  tlp-4-003b.sh \
			  tlp-4-004a.sh \
			  tlp-4-004b.sh \
                          tlp-1-112.pl \
                          talpa-init.sh \
                          tlp-init.sh \
                          tlp-cleanup.sh \
                          test-script1.sh \
                          test-script2.sh \
                          test-script3.sh \
                          test-script4.sh

EXTRA_DIST  = $(check_SCRIPTS) configure
